--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <div>
                 <h1 class="header-title">Все братья</h1>
                 <p class="header-subtitle">Младший брат Лев</p>
-                <p class="header-description">Любит ебашить на паджике, на рубике,и на таске, иногда устраивает тряску. В целом ебнутый тип.</p>
+                <p class="header-description">Любит играть на паджике, на рубике,и на таске, иногда устраивает тряску. В целом интересный тип.</p>
                 <div class="picker">
-                    <a href="/" class="pick">Хуярить за него</a>
+                    <a href="/" class="pick">Играть за него</a>
                     <div class="mmr">max pts 6200</div>
                 </div>
             </div>
@@ -45,9 +45,9 @@
                     src="images/Макс.jpg" 
                     alt="Max brother">
                 </div>
-                <p class="main-description">Любит поделать квесты в ебаных катакомбах, чем неоднократно проебывал катки братьям. Любит фидить и ливать из чата. В целом ебнутый тип.</p>
+                <p class="main-description">Любит поделать квесты в гребаных катакомбах, чем неоднократно проигрывал катки братьям. Любит фидить и ливать из чата. В целом интересный тип.</p>
                 <div class="picker2">
-                    <a href="/" class="pick2">Хуярить за него</a>
+                    <a href="/" class="pick2">Играть за него</a>
                     <div class="mmr2">max pts 4200</div>
                 </div> 
             </div>
@@ -65,9 +65,9 @@
                     src="images/Артем.jpg" 
                     alt="Artem brother">
                 </div>
-                <p class="main-description2">В любой не понятной ситуации хуярит инвокера, выигрывает 90% игр в соло, но братья этого не признают. На других персонажах, увы, рачела ебаный. В целом ебнутый тип.</p>
+                <p class="main-description2">В любой не понятной ситуации выбирает инвокера, выигрывает 90% игр в соло, но братья этого не признают. На других персонажах, увы, рачела бездарный. В целом интересный тип.</p>
                 <div class="picker3">
-                    <a href="/" class="pick3">Хуярить за него</a>
+                    <a href="/" class="pick3">Играть за него</a>
                     <div class="mmr3">max pts 5300</div>
                 </div> 
             </div>
@@ -75,7 +75,7 @@
     </div> 
         <div class="its-over">
             <p class="last-title">Почему именно эта трипла?</p>
-            <p class="last-description">Хочешь узнать кто из них главный ебанат? <a href="/" class="use-faster">Жми скорее</a></p>
+            <p class="last-description">Хочешь узнать кто из них главный претендент? <a href="/" class="use-faster">Жми скорее</a></p>
         </div>
     </main>
 </body>
